# NeuralNetwork

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: AiModel.hpp  Globals.hpp  trainer.hpp  trainerhpp
src/model/: AiModel.cpp  DenseLayer.cpp  DenseLayer.hpp  DenseNetwork.cpp  DenseNetwork.hpp  FNNetwork.cpp  FNNetwork.hpp  ILayer.cpp  ILayer.hpp  INetwork.hpp  LayerParameters.cpp  LayerParameters.hpp  activations.cpp  activations.hpp  config.cpp  config.hpp  dataBase.cpp  dataBase.hpp  layer.cpp  layer.hpp  model.cpp  model.hpp  neuralNetwork.cpp  neuralNetwork.hpp  neuron.cpp  neuron.hpp
src/model/Layers/: Hidden_Layer.cpp  Hidden_Layer.hpp  Output_Layer.cpp  Output_Layer.hpp  layer.cpp  layer.hpp
src/trainer/: backPropagation.cpp  backPropagation.hpp  backPropagationcpp  backPropagationhpp  dataBase.cpp  dataBase.hpp  gradient.cpp  gradient.hpp  learning_rate.cpp  learning_rate.hpp  trainer.cpp
src/visualizer/: VInterface.cpp  VInterface.hpp  VisualizerController.cpp  VisualizerController.hpp  VisualizerRenderer.cpp  VisualizerRenderer.hpp  Vstatus.cpp  Vstatus.hpp  button.cpp  button.hpp  fonts.cpp  fonts.hpp  graph.cpp  graph.hpp  panel.cpp  panel.hpp  state.cpp  state.hpp  visualL  visualL.cpp  visualL.hpp  visualLhpp  visualNN  visualNN.cpp  visualNN.hpp  visualNNhpp
tests/: and-model.cpp  binary_test.cpp  tests.hpp
tests/data/: config-and-model.json  config-binary_test.json  database-and-model.txt  database-binary_test.txt
